# InitiativeTracker

./: Group 2 Contribution Report.docx  InitTracker.py  Procfile  README.md  Team2ProjectCharter.xlsx  index.html  main.py  requirements.txt
Website/: __init__.py  auth.py  models.py  views.py
instance/: database.db
ml/: data1.xlsx  pyproject.toml
ml/data/: characters.csv
ml/src/: team2_dlm.py  team2_ml.py  team2_read_data.py
website/templates/: admin-support-page.html  base.html  create-group.html  edit-group.html  home.html  initiative-tracker.html  login.html  signup.html  sorting-hat-output.html  sorting-hat.html
